overflow fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -77,3 +77,12 @@
   .element::-webkit-scrollbar { /* Chrome, Safari, Opera */
     display: none;
   }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
